--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/seve4687/public_html/
-    - /bin/cp -R ./src $DEPLOYPATH
+    - /bin/cp /src $DEPLOYPATH
