Dev to HML (#46)
* Implementação Google Analytics (#41)

Co-authored-by: Ghabryel Henrique <ghabryelcode@gmail.com>

* Ajustes style (#44)

* Ajustes style

* Ajustes pipeline

* Ajustes pipeline

Co-authored-by: Ghabryel Henrique <ghabryelcode@gmail.com>

* Feature/66 (#45)

* Ajustes style

* Ajustes pipeline

* Ajustes pipeline

* Ajueste PipeLine HML

Co-authored-by: Ghabryel Henrique <ghabryelcode@gmail.com>

Co-authored-by: Ghabryel Henrique <ghabryelcode@gmail.com>

--- a/azure-pipelines-hml.yml
+++ b/azure-pipelines-hml.yml
@@ -4,19 +4,26 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- master
+    - homologacao
 
 pool:
   vmImage: ubuntu-latest
-
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '10.x'
+    versionSpec: '16.17.0'
   displayName: 'Install Node.js'
 
 - script: |
     npm install -g @angular/cli
+    npm i angular-cli-ghpages --save-dev
     npm install
-    ng build --prod
-  displayName: 'npm install and build'
+  displayName: 'Install Dependences'
+
+- script: |
+      npx angular-cli-ghpages --dir=dist/site-amg
+    displayName: 'Build'
+
+- script: |
+      npx angular-cli-ghpages --dir=dist/site-amg
+    displayName: 'Deploy Github Pages'
