--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,14 +4,10 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-    - main
     - master
+    - homologacao
     - dev
     - develop
-    - development
-    - release
-    - release/*
-    - feature/*
 
 pool:
   vmImage: ubuntu-latest
@@ -24,6 +20,11 @@ steps:
 - script: |
     npm install -g @angular/cli
     npm install
-    ng build --configuration production --base-href "/"
+    ng build --configuration production --base-href "/site-amg/"
 
   displayName: 'npm install and build'
+
+- script: |
+    npx angular-cli-ghpages --dir=dist/site-amg
+
+  displayName: 'Deploy'
